--- a/templates/matlab_kernel.html
+++ b/templates/matlab_kernel.html
@@ -84,12 +84,10 @@
               
             
             
-              <p class="caption"><span class="caption-text">课件和讲义</span></p>
+              <p class="caption"><span class="caption-text">课程内容</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../intro_matlab.html">1. MATLAB 介绍</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../ch1/index.html">基础准备及入门</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../quick_start.html">2. 快速入门</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../test.html">3. The reStructuredText Cheat Sheet: Syntax Reminders</a></li>
 </ul>
 <p class="caption"><span class="caption-text">课后作业</span></p>
 <ul>
@@ -97,6 +95,7 @@
 </ul>
 <p class="caption"><span class="caption-text">网站相关:</span></p>
 <ul class="current">
+<li class="toctree-l1"><a class="reference internal" href="../test.html">The reStructuredText Cheat Sheet: Syntax Reminders</a></li>
 <li class="toctree-l1"><a class="reference internal" href="samples.html">示例</a></li>
 <li class="toctree-l1 current"><a class="current reference internal" href="#">Matlab in Jupyter Notebooks</a></li>
 </ul>
