--- a/templates/samples.html
+++ b/templates/samples.html
@@ -41,7 +41,7 @@
     <link rel="index" title="索引" href="../genindex.html" />
     <link rel="search" title="搜索" href="../search.html" />
     <link rel="next" title="Matlab in Jupyter Notebooks" href="matlab_kernel.html" />
-    <link rel="prev" title="第一章课后习题" href="../homework/c1.html" /> 
+    <link rel="prev" title="The reStructuredText Cheat Sheet: Syntax Reminders" href="../test.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -85,12 +85,10 @@
               
             
             
-              <p class="caption"><span class="caption-text">课件和讲义</span></p>
+              <p class="caption"><span class="caption-text">课程内容</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../intro_matlab.html">1. MATLAB 介绍</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../ch1/index.html">基础准备及入门</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../quick_start.html">2. 快速入门</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../test.html">3. The reStructuredText Cheat Sheet: Syntax Reminders</a></li>
 </ul>
 <p class="caption"><span class="caption-text">课后作业</span></p>
 <ul>
@@ -98,6 +96,7 @@
 </ul>
 <p class="caption"><span class="caption-text">网站相关:</span></p>
 <ul class="current">
+<li class="toctree-l1"><a class="reference internal" href="../test.html">The reStructuredText Cheat Sheet: Syntax Reminders</a></li>
 <li class="toctree-l1 current"><a class="current reference internal" href="#">示例</a></li>
 <li class="toctree-l1"><a class="reference internal" href="matlab_kernel.html">Matlab in Jupyter Notebooks</a></li>
 </ul>
@@ -221,7 +220,7 @@
         <a href="matlab_kernel.html" class="btn btn-neutral float-right" title="Matlab in Jupyter Notebooks" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
-        <a href="../homework/c1.html" class="btn btn-neutral float-left" title="第一章课后习题" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
+        <a href="../test.html" class="btn btn-neutral float-left" title="The reStructuredText Cheat Sheet: Syntax Reminders" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
       
     </div>
   
