--- a/templates/samples.html
+++ b/templates/samples.html
@@ -89,6 +89,7 @@
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../intro_matlab.html">1. MATLAB 介绍</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../quick_start.html">2. 快速入门</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../ch4.html">3. 图形</a></li>
 </ul>
 <p class="caption"><span class="caption-text">课后作业</span></p>
 <ul>
