--- a/templates/samples.html
+++ b/templates/samples.html
@@ -39,9 +39,7 @@
   <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
   <link rel="stylesheet" href="../_static/proof.css" type="text/css" />
     <link rel="index" title="索引" href="../genindex.html" />
-    <link rel="search" title="搜索" href="../search.html" />
-    <link rel="next" title="Matlab in Jupyter Notebooks" href="matlab_kernel.html" />
-    <link rel="prev" title="The reStructuredText Cheat Sheet: Syntax Reminders" href="../test.html" /> 
+    <link rel="search" title="搜索" href="../search.html" /> 
 </head>
 
 <body class="wy-body-for-nav">
@@ -88,18 +86,21 @@
               <p class="caption"><span class="caption-text">课程内容</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../intro_matlab.html">1. MATLAB 介绍</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../quick_start.html">2. 快速入门</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../ch4.html">3. 图形</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../ch2.html">2. dd</a></li>
 </ul>
 <p class="caption"><span class="caption-text">课后作业</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../homework/c1.html">第一章课后习题</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c2.html">第二章课后习题</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c3.html">第三章课后作业</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c4.html">第四章课后作业</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c5.html">第五章课后习题</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c6.html">第六章课后习题</a></li>
 </ul>
-<p class="caption"><span class="caption-text">网站相关:</span></p>
-<ul class="current">
-<li class="toctree-l1"><a class="reference internal" href="../test.html">The reStructuredText Cheat Sheet: Syntax Reminders</a></li>
-<li class="toctree-l1 current"><a class="current reference internal" href="#">示例</a></li>
-<li class="toctree-l1"><a class="reference internal" href="matlab_kernel.html">Matlab in Jupyter Notebooks</a></li>
+<p class="caption"><span class="caption-text">其他教程资料:</span></p>
+<ul>
+<li class="toctree-l1"><a class="reference internal" href="../quick_start.html">快速入门</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../ch4.html">图形</a></li>
 </ul>
 
             
@@ -215,15 +216,6 @@
            
           </div>
           <footer>
-  
-    <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
-      
-        <a href="matlab_kernel.html" class="btn btn-neutral float-right" title="Matlab in Jupyter Notebooks" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
-      
-      
-        <a href="../test.html" class="btn btn-neutral float-left" title="The reStructuredText Cheat Sheet: Syntax Reminders" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
-      
-    </div>
   
 
   <hr/>
