--- a/templates/samples.html
+++ b/templates/samples.html
@@ -85,12 +85,12 @@
             
               <p class="caption"><span class="caption-text">课后作业</span></p>
 <ul>
-<li class="toctree-l1"><a class="reference internal" href="../homework/c1.html">第一章课后习题</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../homework/c2.html">第二章课后习题</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../homework/c3.html">第三章课后习题</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../homework/c4.html">第四章课后习题</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../homework/c5.html">第五章课后习题</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../homework/c6.html">第六章课后习题</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c1.html">1. 基础准备及入门</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c6.html">2. M文件</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c5.html">3. 数据和函数的可视化</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c2.html">4. 符号计算</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c3.html">5. 数值数组及向量化运算</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../homework/c4.html">6. 数值计算</a></li>
 </ul>
 
             
